--- a/assets/assets/translations/hy.json
+++ b/assets/assets/translations/hy.json
@@ -11,7 +11,7 @@
     "logout": "Դուրս գալ"
   },
   "subscription": {
-    "active": "Բաժանորդագրություն․ ակտիվ (${price}/ամիս)",
+    "active": "Բաժանորդագրություն․ ակտիվ (40$/ամիս)",
     "inactive": "Բաժանորդագրություն․ ակտիվ չէ"
   },
   "membership": {
@@ -56,7 +56,7 @@
     "detailTitle": "Միջոցառում",
     "subscribed": "Դուք հաջողությամբ բաժանորդագրվեցիք!",
     "lockedBanner": "Դարձեք անդամ՝ բոլոր մանրամասները բացելու համար։",
-    "subscribeCta": "Բաժանորդագրվել ${price}/ամսական",
+    "subscribeCta": "Բաժանորդագրվել $40$/ամսական",
     "loginToSubscribe": "Մուտք գործեք՝ բաժանորդագրվելու համար։",
     "error": "Սխալ՝ միջոցառումների բեռնավորման ժամանակ",
     "empty": "Դեռ միջոցառումներ չկան։",
@@ -66,7 +66,7 @@
     "title": "Այսօրվա պատմությունները",
     "subscribed": "Դուք հաջողությամբ բաժանորդագրվեցիք!",
     "lockedBanner": "Դարձեք անդամ՝ բոլոր պատմությունները բացելու համար։",
-    "subscribeCta": "Բաժանորդագրվել ${price}/ամսական",
+    "subscribeCta": "Բաժանորդագրվել $40$/ամսական",
     "loginToSubscribe": "Մուտք գործեք՝ բաժանորդագրվելու համար։",
     "error": "Սխալ՝ պատմությունների բեռնավորման ժամանակ",
     "empty": "Դեռ պատմություններ չկան։",
