--- a/assets/assets/translations/ru.json
+++ b/assets/assets/translations/ru.json
@@ -11,7 +11,7 @@
     "logout": "Выйти"
   },
   "subscription": {
-    "active": "Подписка: активна (${price}/месяц)",
+    "active": "Подписка: активна (40$/месяц)",
     "inactive": "Подписка: не активна"
   },
   "membership": {
@@ -56,7 +56,7 @@
     "detailTitle": "Событие",
     "subscribed": "Вы успешно оформили подписку!",
     "lockedBanner": "Станьте участником, чтобы открыть все детали событий.",
-    "subscribeCta": "Подписка ${price}/месяц",
+    "subscribeCta": "Подписка 40$/месяц",
     "loginToSubscribe": "Войдите в систему, чтобы оформить подписку.",
     "error": "Ошибка загрузки событий",
     "empty": "Пока нет событий.",
@@ -66,7 +66,7 @@
     "title": "Истории дня",
     "subscribed": "Вы успешно оформили подписку!",
     "lockedBanner": "Станьте участником, чтобы открыть все истории.",
-    "subscribeCta": "Подписка ${price}/месяц",
+    "subscribeCta": "Подписка 40$/месяц",
     "loginToSubscribe": "Войдите в систему, чтобы оформить подписку.",
     "error": "Ошибка загрузки историй",
     "empty": "Пока нет историй.",
