--- a/assets/assets/translations/en.json
+++ b/assets/assets/translations/en.json
@@ -11,7 +11,7 @@
     "logout": "Log Out"
   },
   "subscription": {
-    "active": "Subscription: Active (${price}/month)",
+    "active": "Subscription: Active (40$/month)",
     "inactive": "Subscription: Not active"
   },
   "membership": {
@@ -56,7 +56,7 @@
     "detailTitle": "Event",
     "subscribed": "You are subscribed successfully!",
     "lockedBanner": "Become a member to unlock all event details.",
-    "subscribeCta": "Subscribe ${price}/month",
+    "subscribeCta": "Subscribe 40$/month",
     "loginToSubscribe": "Please log in to subscribe.",
     "error": "Error loading events",
     "empty": "No events yet.",
@@ -66,7 +66,7 @@
     "title": "Today's Stories",
     "subscribed": "You are subscribed successfully!",
     "lockedBanner": "Become a member to unlock all stories.",
-    "subscribeCta": "Subscribe ${price}/month",
+    "subscribeCta": "Subscribe 40$/month",
     "loginToSubscribe": "Please log in to subscribe.",
     "error": "Error loading stories",
     "empty": "No stories yet.",
